Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/liuhuan136187364/liuhuan136187364.github.io-myBlog/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/liuhuan136187364/liuhuan136187364.github.io-myBlog/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/liuhuan136187364/liuhuan136187364.github.io-myBlog" class="code">View Liuhuan136187364.GitHub.io-myblog on GitHub</a>
+          <a href="https://github.com/liuhuan136187364/liuhuan/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/liuhuan136187364/liuhuan/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/liuhuan136187364/liuhuan" class="code">View Liuhuan136187364.GitHub.io-myblog on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -60,7 +60,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/liuhuan136187364" class="avatar"><img src="https://avatars1.githubusercontent.com/u/18566803?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/liuhuan136187364">liuhuan136187364</a> maintains <a href="https://github.com/liuhuan136187364/liuhuan136187364.github.io-myBlog">Liuhuan136187364.GitHub.io-myblog</a></p>
+      <p><a href="https://github.com/liuhuan136187364" class="avatar"><img src="https://avatars1.githubusercontent.com/u/18566803?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/liuhuan136187364">liuhuan136187364</a> maintains <a href="https://github.com/liuhuan136187364/liuhuan">Liuhuan136187364.GitHub.io-myblog</a></p>
 
 
       </div>
@@ -71,7 +71,7 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/liuhuan136187364/liuhuan136187364.github.io-myBlog/tarball/master" class="tar">tar</a><a href="https://github.com/liuhuan136187364/liuhuan136187364.github.io-myBlog/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/liuhuan136187364/liuhuan/tarball/master" class="tar">tar</a><a href="https://github.com/liuhuan136187364/liuhuan/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
