Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <article class="markdown-body">
           <h1>
-<a id="liuhuan136187364githubio-myblog" class="anchor" href="#liuhuan136187364githubio-myblog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>liuhuan136187364.github.io-myBlog</h1>
+<a id="liuhuan" class="anchor" href="#liuhuan" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>liuhuan</h1>
 
 <p>my blog welcome everyone ! </p>
 
